# RusTerm

./: .gitignore  .gitmodules  Cargo.toml  concurrent_request.py  opencode.json
.claude/: Claude.md
.playwright-mcp/: page-2026-06-18T17-19-55-017Z.yml
.serena/: project.yml
.serena/memories/RusTerm/: architecture.md  sync-crate.md  title-bar-highlight-ctrl-w.md
assets/: AppIcon.icns  icon-dark.icns  icon-template.icns  icon.icns
crates/rusterm-ai/: Cargo.toml
crates/rusterm-ai/src/: anthropic.rs  lib.rs  openai.rs  suggestion.rs
crates/rusterm-analytics/: Cargo.toml
crates/rusterm-analytics/src/: classify.rs  lib.rs  mirror.rs
crates/rusterm-app/: Cargo.toml  Dioxus.toml  build.rs
crates/rusterm-app/src/: main.rs
crates/rusterm-core/: Cargo.toml
crates/rusterm-core/benches/: terminal_throughput.rs
crates/rusterm-core/src/: command_safety.rs  config.rs  config_manager.rs  event.rs  lib.rs  logging.rs  paths.rs  session.rs  session_log.rs  session_state.rs  terminal.rs  window_state.rs
crates/rusterm-core/tests/: logging_privacy.rs
crates/rusterm-crypto/: Cargo.toml
crates/rusterm-crypto/src/: cipher.rs  encrypt.rs  key_derive.rs  keyring_store.rs  lib.rs
crates/rusterm-db/: Cargo.toml
crates/rusterm-db/src/: history.rs  lib.rs  schema.rs  store.rs
crates/rusterm-history/: Cargo.toml
crates/rusterm-history/src/: atuin_db.rs  bash_history.rs  fish_history.rs  hybrid.rs  lib.rs  zsh_history.rs
crates/rusterm-plugins/: Cargo.toml
crates/rusterm-plugins/src/: host.rs  lib.rs  manager.rs
crates/rusterm-proto/: Cargo.toml
crates/rusterm-proto/src/: lib.rs  serial.rs  shell.rs  tcp.rs  telnet.rs
crates/rusterm-proto/tests/: shell.rs
crates/rusterm-ssh/: Cargo.toml
crates/rusterm-ssh/src/: channel.rs  client.rs  known_hosts.rs  lib.rs  ssh_config.rs
crates/rusterm-ssh/tests/: live_pwdwd_scenario.rs
crates/rusterm-sync/: Cargo.toml
crates/rusterm-sync/src/: backend.rs  config.rs  error.rs  lib.rs  manager.rs
crates/rusterm-sync/src/backends/: gist.rs  http.rs  local_folder.rs  mod.rs
crates/rusterm-ui/: Cargo.toml
crates/rusterm-ui/src/: analytics.rs  app.rs  components.rs  layout.rs  lib.rs  state.rs
crates/rusterm-ui/src/components/: ai_panel.rs  close_confirmation_dialog.rs  connection_dialog.rs  dangerous_command_dialog.rs  history_panel.rs  master_password_dialog.rs  onekey_manager.rs  onekey_popup.rs  restore_session_dialog.rs  settings_dialog.rs  sidebar.rs  suggestion_popup.rs  tab_bar.rs  terminal_view.rs
docs/: LOGGING.md  SYNC.md
docs/superpowers/plans/: 2026-06-17-command-history-completion.md
docs/superpowers/specs/: 2026-06-06-theme-system-design.md  2026-06-17-command-history-completion-design.md  2026-06-22-onekeys-design.md
scripts/: bundle-macos.sh  update-macos-icon.sh  verify-macos-bundle.sh
