[workspace]
resolver = "2"
members = [
    "crates/rusterm-app",
    "crates/rusterm-core",
    "crates/rusterm-ssh",
    "crates/rusterm-crypto",
    "crates/rusterm-db",
    "crates/rusterm-ai",
    "crates/rusterm-analytics",
    "crates/rusterm-plugins",
    "crates/rusterm-proto",
    "crates/rusterm-ui",
    "crates/rusterm-history",
    "crates/rusterm-sync",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rusterm/rusterm"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal
vte = "0.15"
portable-pty = "0.9"
regex = "1"

# SSH
russh = { version = "0.61", features = ["aws-lc-rs"] }
russh-config = "0.58"

# Crypto & Security
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
keyring = "3"
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }

# Database
rusqlite = { version = "0.37", features = ["bundled", "vtab", "functions"] }
tokio-rusqlite = "0.7"
# Embedded OLAP engine for analytics (rusterm-analytics crate).
# `bundled` builds the bundled libduckdb (~50MB compiled) so we don't depend
# on a system install. See crates/rusterm-analytics/.
duckdb = { version = "1.4.5", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"

# AI
async-openai = "0.40"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Protocols
serialport = "4.9"
tokio-util = { version = "0.7", features = ["compat"] }
bytes = "1"

# Plugin system
wasmtime = { version = "45", default-features = false, features = ["cranelift", "pooling-allocator"] }
wasmtime-wasi = "45.0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Utility
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
base64 = "0.22"
bitflags = "2"
unicode-width = "0.2"

# Dioxus UI
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-router = "0.7"

# Cross-crate deps
rusterm-core = { path = "crates/rusterm-core" }
rusterm-ssh = { path = "crates/rusterm-ssh" }
rusterm-crypto = { path = "crates/rusterm-crypto" }
rusterm-db = { path = "crates/rusterm-db" }
rusterm-ai = { path = "crates/rusterm-ai" }
rusterm-analytics = { path = "crates/rusterm-analytics" }
rusterm-plugins = { path = "crates/rusterm-plugins" }
rusterm-proto = { path = "crates/rusterm-proto" }
rusterm-ui = { path = "crates/rusterm-ui" }
rusterm-history = { path = "crates/rusterm-history" }
rusterm-sync = { path = "crates/rusterm-sync" }

# Patched transitive deps
# `block v0.1.6` (pulled in by `cocoa` via `dioxus-desktop`) declares an
# uninhabited `static _NSConcreteStackBlock: Class;` which triggers Rust's
# future-incompat lint (issue #74840). The upstream crate has been
# unmaintained since 2018, so we vendor a minimal fix: replace the empty
# `enum Class { }` with a zero-sized inhabited struct. The type is only used
# as `*const Class` for pointer identity, so this is semantically a no-op.
[patch.crates-io]
block = { path = "third_party/block" }
