[package]
name = "rusterm-analytics"
version.workspace = true
edition.workspace = true

[dependencies]
duckdb.workspace = true
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }

rusterm-db = { workspace = true }

[dev-dependencies]
tempfile = "3"
