[package]
name = "rusterm-app"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "rusterm"
path = "src/main.rs"

[dependencies]
rusterm-core.workspace = true
rusterm-ssh.workspace = true
rusterm-crypto.workspace = true
rusterm-db.workspace = true
rusterm-ai.workspace = true
rusterm-plugins.workspace = true
rusterm-proto.workspace = true
rusterm-ui.workspace = true

dioxus.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

[build-dependencies]
# SVG -> PNG rasterizer at build time. The triplet must be version-aligned:
# resvg uses usvg uses tiny-skia. Keep them on the same major.minor.
resvg = { version = "0.42", default-features = false }
usvg = { version = "0.42", default-features = false }
tiny-skia = "0.11"
