[package]
name = "rusterm-core"
version.workspace = true
edition.workspace = true

[dependencies]
vte = { workspace = true, features = ["ansi"] }
bitflags.workspace = true
unicode-width.workspace = true
portable-pty.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
futures.workspace = true
bytes.workspace = true
base64.workspace = true
rand = "0.9"
dirs.workspace = true
argon2.workspace = true
rusterm-crypto.workspace = true

[dev-dependencies]
toml.workspace = true
tempfile = "3"
