[package]
name = "rusterm-history"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
rusqlite.workspace = true
rusterm-db.workspace = true

[features]
default = []
## Enables network sync for history (NOT recommended — violates local-only policy).
## This feature exists only so that any future network code can be gated behind it.
## When disabled (the default), no history data can leave the local machine.
network = []
