[package]
name = "rusterm-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true

rusterm-core.workspace = true
