[package]
name = "rusterm-ssh"
version.workspace = true
edition.workspace = true

[dependencies]
russh.workspace = true
russh-config.workspace = true
russh-keys.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
futures.workspace = true
bytes.workspace = true
dirs.workspace = true

rusterm-core.workspace = true
