[package]
name = "rusterm-sync"
version.workspace = true
edition.workspace = true

[dependencies]
rusterm-crypto.workspace = true
rusterm-core.workspace = true

zeroize.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
base64.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

dirs.workspace = true

[dev-dependencies]
tempfile = "3"
